<resources>
    <string name="app_name">Karma-AndroidPF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_favores">Favores</string>
    <string name="title_pedir">Pedir Favor</string>
    <string name="fotocopias_en_graphic">Fotocopias en Graphic</string>
    <string name="por_favor_seleccione_el_tipo_de_favor_a_solicitar">Por favor, seleccione el tipo de favor a solicitar</string>
    <string name="digite_los_detalles">Digite los detalles</string>
    <string name="compra_en_km5">Compra en KM5</string>
    <string name="buscar_domicilio">Buscar Domicilio</string>
    <string name="aceptar">Aceptar</string>
    <string name="lugar_de_entrega">Lugar de entrega:</string>
    <string name="detalles_del_favor">Detalles del Favor</string>
    <string name="tipo_de_favor">Tipo de Favor:</string>
    <string name="textview">TextView</string>
    <string name="usuario">Usuario:</string>
    <string name="detalles">Detalles:</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="tomar_favor">Tomar Favor</string>
</resources>